# embedded-templates

./: .gitmodules  CMakeLists.txt  Makefile  README.md  examples.py
examples/: CMakeLists.txt  exti_key.c  freertos_hello.c  hal_delay.c  hal_gpio.c  justprint.c
lib/: CMakeLists.txt
lib/FreeRTOS/: CMakeLists.txt
lib/FreeRTOS/inc/: FreeRTOS.h
lib/inc/: FreeRTOSConfig.h  SEGGER_RTT_Conf.h  py32f0xx_hal_conf.h  py32f0xx_it.h
linker/: standalone.ld
src/: main.c  py32f0xx_hal_msp.c  py32f0xx_it.c  system_py32f0xx.c
startup/: cortex-m.c
toolchain/: clang.cmake  gcc.cmake  zig.cmake
